--- a/IE104_Internet_CongNgheWeb/LAB/Bai_tap_tuan/W1/4 - TruyenNguNgon/index.html
+++ b/IE104_Internet_CongNgheWeb/LAB/Bai_tap_tuan/W1/4 - TruyenNguNgon/index.html
@@ -25,11 +25,8 @@
                 <td>
                     <p>
                         <span style="font-size: 40px; 
-                                    color: lightgreen;
-                                    font-style: italic;">
-                                    <b>N</b>
-                        </span>
-                        <span>gười đến dự đám cưới khá đông. Ông hàng xóm gọi bác làm công đến và bảo:</span>
+                        color: lightgreen;
+                        font-style: italic;"><b>N</b></span><span>gười đến dự đám cưới khá đông. Ông hàng xóm gọi bác làm công đến và bảo:</span>
                     </p>
                     <p>- Này, anh đi xem xem có bao nhiêu người đến dự đám cưới bên ấy.</p>
                     <p>
@@ -45,5 +42,7 @@
             </tr>
         </table>
     </div>
+
+    
 </body>
 </html>
