--- a/IE104_Internet_CongNgheWeb/LAB/Bai_tap_tuan/W1/4 - TruyenNguNgon/index.html
+++ b/IE104_Internet_CongNgheWeb/LAB/Bai_tap_tuan/W1/4 - TruyenNguNgon/index.html
@@ -13,7 +13,7 @@
                         width: 100%;";
                     border="2">
                 <tr>
-                    <td style="color: orange; font-size: 30px;">
+                    <td style="color: tomato; font-size: 30px;">
                         <b>CHỈ CÓ MỘT NGƯỜI THÔI</b>
                     </td>
                 </tr>
@@ -60,7 +60,7 @@
                     Nhưng một bà lão đã dẹp khúc gỗ sang bên để người khác khỏi vấp ngã. 
                     Chỉ có con người mới làm như vậy. 
                     <span style="font-style: italic;
-                                background-color: orange;">
+                                background-color: tomato;">
                         <u><b>Một mình bà lão là người</b></u></span>.
                 </p>
             </div>
@@ -90,8 +90,47 @@
                     hàm chứa những ý nghĩa thiết thực đáng trân trọng trong cuộc sống thường nhật của chúng ta. 
                     Đây là một câu chuyện cũng như một bài học được rút ra từ đời thường mà có lẽ tác giả đã từng bắt gặp trong một dịp nào đó, 
                     nhằm gửi gắm cho những ai có tâm ích kỷ, có mắt như mù, chỉ biết cá nhân mình mà không hề nghĩ đến bản thân của người khác. 
-                    Mong rằng tất cả mọi chúng ta,sau khi đọc câu chuyện trên, hãy noi gương bà lão kia để cuộc sống của chúng ta ngày mỗi thăng hoa và có ý nghĩa hơn. 
+                    Mong rằng tất cả mọi chúng ta,sau khi đọc câu chuyện trên, 
+                    hãy noi gương bà lão kia để cuộc sống của chúng ta ngày mỗi thăng hoa và có ý nghĩa hơn. 
                     Kính chúc quý độc giả gặp nhiều an lac, hạnh phúc.
+                </p>
+
+                <br>
+                <hr style="color: tomato;
+                        height: 2px;
+                        background-color: tomato;">
+            </div>
+
+            <div>
+                <img src="images/songoku.gif";
+                    alt="Songoku";
+                    style="float: right;
+                        height: 80px;">
+
+                <p>
+                    Câu chuyện có khía cạnh đúng. 
+                    Nếu 1 người mà mọi suy nghĩ, hành động vì bản thân thì người đó chẳng khác gì 1 động vật. 
+                    Cái khác biệt nhất giữa 1 con người và 1 con vật là người đó biết sống vì người khác. 
+                    Nếu nhìn qua thì thấy câu nói hơi cực đoan, vơ đũa cả nắm nhưng đặt trong hoàn cảnh câu nói được nói ra 
+                    bởi nhân vật bác làm thuê thì có thể chấp nhận được. 
+                    Cái quan trọng là bài học được rút ra!
+                </p>
+
+                <br>
+                <hr style="color: tomato;
+                        height: 2px;
+                        background-color: tomato;">
+            </div>
+
+            <div></div>
+                <img src="images/xuongrongtinhyeu.jpg";
+                    alt="Xương rồng tình yêu";
+                    style="float: right;
+                        height: 80px;">
+
+                <p>
+                    Mình thấy bài này rất hay, vì cuộc sống của chúng ta chỉ thật sự hạnh phúc khi chúng ta biết sống vì người khác. 
+                    Muốn người khác làm gì cho mình thì chính mình hãy làm cho họ trước.
                 </p>
             </div>
         </div>
