--- a/IE104_Internet_CongNgheWeb/LAB/Bai_tap_tuan/W1/4 - TruyenNguNgon/index.html
+++ b/IE104_Internet_CongNgheWeb/LAB/Bai_tap_tuan/W1/4 - TruyenNguNgon/index.html
@@ -122,7 +122,7 @@
                         background-color: tomato;">
             </div>
 
-            <div></div>
+            <div>
                 <img src="images/xuongrongtinhyeu.jpg";
                     alt="Xương rồng tình yêu";
                     style="float: right;
