--- a/IE104_Internet_CongNgheWeb/LAB/Bai_tap_tuan/W1/4 - TruyenNguNgon/index.html
+++ b/IE104_Internet_CongNgheWeb/LAB/Bai_tap_tuan/W1/4 - TruyenNguNgon/index.html
@@ -43,7 +43,7 @@
                 </p>                
             </div>
 
-            <div>
+            <div style="text-indent: 30px;">
                 <img src="images/bay-cuu.jpg";
                     alt="Bầy cừu";
                     style="float: left;
