Done W1_BTthem_IE104

--- a/IE104_Internet_CongNgheWeb/Tuan2_3/form_YKienBanDoc.html
+++ b/IE104_Internet_CongNgheWeb/Tuan2_3/form_YKienBanDoc.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body margin="100px">
+<body style="margin: 50px;">
     <form>
         <table align="center">
             <tr>
@@ -14,7 +14,7 @@
 
             <tr>
                 <td colspan="3">
-                    <textarea cols="80"; rows="10"; style="color: grey;";>Xin vui lòng gõ tiếng việt có dấu. Ý kiến của bạn sẽ được biên tập trước khi đăng.</textarea>
+                    <textarea cols="100"; rows="10"; style="color: grey;";>Xin vui lòng gõ tiếng việt có dấu. Ý kiến của bạn sẽ được biên tập trước khi đăng.</textarea>
                 </td>
             </tr>
 
@@ -25,5 +25,7 @@
     
 
     </form>
+
+
 </body>
 </html>
