--- a/IE104_Internet_CongNgheWeb/Tuan4/DemoCSS/index.html
+++ b/IE104_Internet_CongNgheWeb/Tuan4/DemoCSS/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>index</title>
+
+    <style>
+        p, h1{
+            color: darkblue;
+        }
+    </style>
 </head>
-<body>
+<body align="center">
+    <h1>Lập trình Web</h1>
     <p>Toàn diện - Sáng tạo - Phụng sự</p>
 </body>
 </html>
