--- a/IE104_Internet_CongNgheWeb/Tuan4/DemoCSS/index4.html
+++ b/IE104_Internet_CongNgheWeb/Tuan4/DemoCSS/index4.html
@@ -9,10 +9,14 @@
         .p1 {
             color: darkblue;
         }
+
+        #id1 {
+            color: brown;
+        }
     </style>
 </head>
 <body align="center">
-    <p>Toàn diện - Sáng tạo - Phụng sự 1</p>
+    <p id="id1">Toàn diện - Sáng tạo - Phụng sự 1</p>
     <p class="p1">Học đi đôi với hành 2</p>
     <p>Toàn diện - Sáng tạo - Phụng sự 3</p>
     <p class="p1">Học đi đôi với hành 4</p>
