--- a/IE104_Internet_CongNgheWeb/Tuan4/W1/External/4-TruyenNguNgon/index.html
+++ b/IE104_Internet_CongNgheWeb/Tuan4/W1/External/4-TruyenNguNgon/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Truyện ngụ ngôn: Chỉ Có Một Người Thôi</title>
+
+    <link rel="stylesheet"; href="CSS/styles.css">
 </head>
 <body>
     <div>
         <div>
-            <table style="border-color: lightgreen; 
-                        text-align: center;
-                        width: 100%;";
-                    border="2">
+            <table id="title"; border="2">
                 <tr>
-                    <td style="color: tomato; font-size: 30px;">
+                    <td id="td1">
                         <b>CHỈ CÓ MỘT NGƯỜI THÔI</b>
                     </td>
                 </tr>
@@ -22,16 +21,10 @@
 
         <div>
             <div>               
-                <img src="images/ChiCoMotNguoiThoi.gif";
-                    alt="Một bà cụ";
-                    style="float: right;
-                        height: 180px;">
+                <img id="MotNguoi">
 
                 <p>
-                    <span style="color: lightgreen;
-                                font-size: 30px;
-                                font-style: italic;
-                                font-weight: bold;">
+                    <span id="span1">
                         N</span><span>gười đến dự đám cưới khá đông. Ông hàng xóm gọi bác làm công đến và bảo:</span>
                 </p>
                 <p>- Này, anh đi xem xem có bao nhiêu người đến dự đám cưới bên ấy.</p>
