--- a/IE104_Internet_CongNgheWeb/Tuan4/Box.html
+++ b/IE104_Internet_CongNgheWeb/Tuan4/Box.html
@@ -12,7 +12,7 @@
             text-decoration: none;
             border: 1px solid red;
             border-radius: 5px;
-            position: fixed;
+            position: relative;
             top: 100px
         }
 
@@ -20,10 +20,79 @@
             background-color: darkgray;
             color: black;
         }
+
+        .block_PR {
+            background-color: aquamarine;
+            padding: 30px;
+            border: 1px solid darkblue;
+            border-radius: 5px;
+            background-position: right bottom;
+            position: fixed;
+            right: 50px;
+            bottom: 30px;
+            text-decoration: none;
+            text-align:center;
+        }
+
+        .block_PR:hover {
+            background-color: aliceblue;
+            color: black;
+        }
     </style>
 </head>
 <body>
     <p>Nội dung:</p>
     <a class="block"; href="http://">Chuyển trang</a>
+
+    <a class="block_PR"; href="https://www.thegioididong.com/">Quảng Cáo</a>
+
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
+    <p>ND------------------------------------------------</p>
 </body>
 </html>
