--- a/IE104_Internet_CongNgheWeb/Tuan4/Phone_ViettelStore.html
+++ b/IE104_Internet_CongNgheWeb/Tuan4/Phone_ViettelStore.html
@@ -7,19 +7,26 @@
 
     <style>
         div {
-            margin: auto;
-            padding: 80px;
-            width: 200px;
-            height: 300px;
-            background-image: url(iPhone.png);
-            background-repeat: no-repeat;
-            background-size: cover;
+            background-color: white;
+            width: 250px;
+            height: fit-content;
+            padding: 0px 0px 25px 0px;
             border-top-left-radius: 10px;
         }
 
     </style>
 </head>
-<body style="background-color: whitesmoke;">
-    <div></div>
+<body style="background-color: whitesmoke;
+            margin: 100px";
+    align="center">
+
+    <div>
+        <img src="iPhone.png"
+            style="width: 200px;">
+    </div>
+
+    <img src="iPhone.png"
+            style="width: 200px;">
+    
 </body>
 </html>
