--- a/IE104_Internet_CongNgheWeb/Tuan5/b14_BTthem/index.html
+++ b/IE104_Internet_CongNgheWeb/Tuan5/b14_BTthem/index.html
@@ -74,6 +74,20 @@
 
                 <div class="button">Đọc tiếp...</div>
             </div>
+
+            <div class="column-box">
+                <img src="data/03.jpg"; alt="ThinkPad X1 Carbon Gen 9"; style="width: 359px;">
+                <p class="titleInfo">ThinkPad X1 Carbon Gen 9</p>
+                <p class="noteInfo">@Ngọc Ánh 06 Sep 2021 (Đã xem: 530)</p>
+                <p>
+                    Thông tin sản phẩm và bảo hành<br>
+                    Tình trạng: Sản phẩm mới 100%, nguyên seal<br>
+                    Bảo hành: 18 tháng, 1 đổi 1 theo chính sách của Lenovo<br>
+                    Phụ kiện: Máy, Sạc, Full Box
+                </p>
+
+                <div class="button">Đọc tiếp...</div>
+            </div>
         </div>
     </div>
 </body>
