--- a/IE104_Internet_CongNgheWeb/Tuan5/b19_BTthem/index.html
+++ b/IE104_Internet_CongNgheWeb/Tuan5/b19_BTthem/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bài 19 - Bài tập làm thêm</title>
+    <link rel="stylesheet"; href="styles.css">
 </head>
-<body>
-    
+<body style="background-color: whitesmoke;">
+    <div class="container">
+        <div class="titleBox">
+            <p class="title1">VIN Digibank</p>
+            <p class="title2">Log In</p>
+        </div>
+
+        <div class="contentBox">
+            <div>
+                <label class="lbInfo">E-mail</label><br>
+                <input class="ip"; type="email"; value="anhntb@gmail.com">
+            </div>
+            <div>
+                <label class="lbInfo">Password</label><br>
+                <input class="ip"; type="password"; value="**********">
+            </div>
+            <div class="btnLogin">Log In</div>
+        </div>
+    </div>
 </body>
 </html>
