--- a/IE104_Internet_CongNgheWeb/LAB/Bai_tap_tuan/W2/6 - ChuongTrinhHoc/index.html
+++ b/IE104_Internet_CongNgheWeb/LAB/Bai_tap_tuan/W2/6 - ChuongTrinhHoc/index.html
@@ -3,9 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CHƯƠNG TRÌNH HỌC THIẾT KẾ ĐỒ HỌA</title>
+
+    <link rel="stylesheet"; href="CSS/styles.css">
 </head>
 <body>
+    <div class="titleInfo">
+        CHƯƠNG TRÌNH HỌC THIẾT KẾ ĐỒ HỌA
+    </div>
+
+    <table class="tbInfo"; align="center"; border="1">
+        <tr class="headerRow">
+            <td rowspan="2">STT</td>
+            <td rowspan="2">TÊN MÔN HỌC</td>
+            <td colspan="2">SỐ TIẾT</td>
+        </tr>
+
+        <tr class="headerRow">
+            <td>Lý thuyết</td>
+            <td>Thực hành</td>
+        </tr>
+
+        <tr class="row1">
+            <td class="textInfo";>1</td>
+            <td>Thiết kế mẫu với CorelDraw</td>
+            <td class="textInfo";>30</td>
+            <td class="textInfo";>60</td>
+        </tr>
+
+        <tr class="row2">
+            <td class="textInfo";>2</td>
+            <td>Thiết kế mẫu với Illustrator</td>
+            <td class="textInfo";>30</td>
+            <td class="textInfo";>60</td>
+        </tr>
+
+        <tr class="row1">
+            <td class="textInfo";>3</td>
+            <td>Xử lý ảnh với Photoshop</td>
+            <td class="textInfo";>30</td>
+            <td class="textInfo";>60</td>
+        </tr>
+
+        <tr class="row2">
+            <td class="textInfo";>4</td>
+            <td>Mỹ thuật ứng dụng</td>
+            <td class="textInfo";>30</td>
+            <td class="textInfo";>30</td>
+        </tr>
+
+        <tr class="row1">
+            <td class="textInfo";>5</td>
+            <td>Nghệ thuật chữ</td>
+            <td class="textInfo";>30</td>
+            <td class="textInfo";>30</td>
+        </tr>
+
+        <tr class="row2">
+            <td class="textInfo";>6</td>
+            <td>Layout web</td>
+            <td class="textInfo";>30</td>
+            <td class="textInfo";>60</td>
+        </tr>
+
+        <tr class="row1">
+            <td class="textInfo";>7</td>
+            <td>Thiết kế bộ nhận diện thương hiệu</td>
+            <td class="textInfo";>30</td>
+            <td class="textInfo";>60</td>
+        </tr>
+
+        <tr class="row3">
+            <td class="textInfo";>8</td>
+            <td>Khóa luận tốt nghiệp</td>
+            <td class="textInfo";></td>
+            <td class="textInfo";>150</td>
+        </tr>
+    </table>
     
 </body>
 </html>
