--- a/IE104_Internet_CongNgheWeb/Test/test.html
+++ b/IE104_Internet_CongNgheWeb/Test/test.html
@@ -27,5 +27,14 @@
         <input type="submit" value="Submit">
     </form>
 
+    <div style="display: grid;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px;">
+        <div>Tên người dùng:</div>
+        <div><input type="text"></div>
+        <div>Mật khẩu:</div>
+        <div><input type="text"></div>
+        <div><input type="submit"; value="Đăng nhập"></div>
+    </div>
 </body>
 </html>
