--- a/IE104_Internet_CongNgheWeb/LAB/Bai_tap_tuan/W3/11 - FormDangNhap/index.html
+++ b/IE104_Internet_CongNgheWeb/LAB/Bai_tap_tuan/W3/11 - FormDangNhap/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Form đăng nhập</title>
+
+    <link rel="stylesheet"; href="CSS/styles.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="titleInfo">Form đăng nhập</div>
+        <div class="box">
+            <div>Tên người dùng:</div>
+            <div><input type="text"></div>
+            <div>Mật khẩu:</div>
+            <div><input type="text"></div>
+            <div class="btn"><input type="submit"; value="Đăng nhập"></div>
+        </div>
+    </div>
 </body>
 </html>
