--- a/IE104_Internet_CongNgheWeb/LAB/Bai_tap_tuan/W3/11 - FormDangNhap/index.html
+++ b/IE104_Internet_CongNgheWeb/LAB/Bai_tap_tuan/W3/11 - FormDangNhap/index.html
@@ -9,14 +9,19 @@
 </head>
 <body>
     <div class="container">
-        <div class="titleInfo">Form đăng nhập</div>
-        <div class="box">
-            <div>Tên người dùng:</div>
-            <div><input type="text"></div>
-            <div>Mật khẩu:</div>
-            <div><input type="text"></div>
-            <div class="btn"><input type="submit"; value="Đăng nhập"></div>
+        <div class="form">
+            <div class="titleInfo">Form đăng nhập</div>
+            <div class="box">
+                <div class="textInfo">Tên người dùng</div>
+                <input class="textBox"; type="text">
+                <div class="textInfo">Mật khẩu</div>
+                <input class="textBox"; type="password"; value="1234">
+                <div></div>
+                <input type="submit"; value="Đăng nhập"; class="btn">
+            </div>
         </div>
     </div>
+
+    <input class="test">
 </body>
 </html>
