--- a/IE104_Internet_CongNgheWeb/BEM/Demo1/index.html
+++ b/IE104_Internet_CongNgheWeb/BEM/Demo1/index.html
@@ -61,12 +61,12 @@
     </div>
 </div>
 
-<div class="alert alert--error">
+<div class="alert alert--warning">
     <div class="alert__icon">
         <i class="fas fa-times-circle"></i>
     </div>
     <div class="alert__content">
-        <h2 class="alert__title">Error</h2>
+        <h2 class="alert__title"`>Error</h2>
         <p class="alert__message">Message</p>
     </div>
     <div class="alert__close">
@@ -75,3 +75,4 @@
 </div>
 </body>
 </html>
+
